InsuranceOrg/force-app/main/default/objects/vlocity_ins__DocuSignEnvelopeObjectSetting__c/vlocity_ins__DocuSignEnvelopeObjectSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>DocuSign Envelope Object Setting</label>
</CustomObject>