InsuranceOrg/force-app/main/default/objects/vlocity_ins__DocuSignEnvelopeObjectSetting__c/fields/vlocity_ins__DocParentIdField__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DocParentIdField__c</fullName>
    <description>Parent Id for document attachment.</description>
    <label>Document Parent Id Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>