InsuranceOrg/force-app/main/default/objects/vlocity_ins__DocuSignEnvelopeObjectSetting__c/fields/vlocity_ins__RecipientObjectName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RecipientObjectName__c</fullName>
    <label>Recipient Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>